<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GreyBackground"
    android:weightSum="1">


    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/close_help"
        android:src="@drawable/close_help"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo_form3"
        android:src="@drawable/logo_form2x"
        android:layout_gravity="center_horizontal"

         />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/TextWhite"
        android:text="@string/buttonInstructions"
        android:id="@+id/buttonInstruction"
        android:layout_margin="20dp"
        android:background="@drawable/button_dark_blue"/>

    <Button
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/TextWhite"
        android:background="@drawable/button_dark_blue"
        android:text="@string/buttonAppreciate"
        android:layout_margin="20dp"
        android:id="@+id/buttonAppreciate" />
</LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/questions"
        android:textColor="@color/Black"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailR" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/site" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:text="@string/TermsOfUse"
        android:ems="10"
        android:id="@+id/terms" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/support"
        android:textColor="@color/Black"
        android:id="@+id/support"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="3dp"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/pr"
        android:src="@drawable/prtnrs_form2x"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/copyright"
        android:textColor="@color/Black"
        android:layout_marginTop="3dp"
        android:id="@+id/copy"
        android:layout_gravity="center_horizontal" />


</LinearLayout>