<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GreyBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/linear_layout_background"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/payInfo1"
            android:id="@+id/pay_info1"
            android:background="@color/TextWhite"
            android:singleLine="true"

             />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/number_p"
            android:background="@color/TextWhite"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/payInfo2"
            android:id="@+id/pay_info2"

            android:background="@color/TextWhite"
             />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/act"
            android:layout_gravity="center_horizontal"
            android:background="@color/TextWhite"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/payInfo3"
            android:id="@+id/text42"

            android:background="@color/TextWhite"
            android:singleLine="false"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name"
            android:background="@color/TextWhite"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title5"
            android:id="@+id/text52"

            android:background="@color/TextWhite"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            android:background="@color/TextWhite"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="*  *  *"
        android:id="@+id/textView"
        android:layout_gravity="left|center_horizontal"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/payInfo4"
        android:id="@+id/pay_info4"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/money_final"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="80dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/payInfo5"
        android:id="@+id/pay_info5"
        android:layout_margin="7dp"
        android:layout_gravity="center_horizontal" />


    <ImageView
        android:id="@+id/prtment"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:src="@drawable/payment_systems2x" />

    <Button

        android:id="@+id/buttonPay"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/GreenButton"
        android:text="@string/buttonPay"
        android:textColor="@color/TextWhite"
        android:textSize="20dp" />
</LinearLayout>